@@ -1,5 +1,10 @@
 2009-07-19  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/totem-plugin-viewer.c (main):
+	Add PA properties to the binary (Closes: #573912)
+
+2009-07-19  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-audio-preview.c (main): Add PA properties
 	to the binary (Closes: #573912)
 
